added ticket number and switched to set list of names

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<div class="header">
 		<span>Participants:<b id="participant-number"></b></span>
+		<span style="float: right; margin-bottom: -1px;">Tickets:<b id="ticket-number"></b></span>
 	</div>
 	<div class='enter-names'>
 		<p>Enter names separated by new lines:</p>
